--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,3 +20,6 @@ AllCops:
     - 'Rakefile'
     - 'node_modules/**/*'
     - !ruby/regexp /old_and_unused\.rb$/
+  StyleGuideCopsOnly:
+    FrozenStringLiteralComment:
+      Enabled: false
