--- a/spec/cassettes/An_Admin_can_edit_a_tutorial/by_adding_a_video.yml
+++ b/spec/cassettes/An_Admin_can_edit_a_tutorial/by_adding_a_video.yml
@@ -2,6 +2,71 @@
 http_interactions:
 - request:
     method: get
+    uri: https://chromedriver.storage.googleapis.com/LATEST_RELEASE_77.0.3865
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Host:
+      - chromedriver.storage.googleapis.com
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      X-Guploader-Uploadid:
+      - AEnB2UqvHbRci6hLtMlIORr26vFAL8dKzHY_jFu7_vJ3HdXqJUgXWvG-QhDpZQ5be_y0_Am8C8deys_YYR8mvhDbua9B9RPGIA
+      Expires:
+      - Wed, 09 Oct 2019 04:35:42 GMT
+      Date:
+      - Wed, 09 Oct 2019 03:35:42 GMT
+      Last-Modified:
+      - Tue, 20 Aug 2019 18:02:50 GMT
+      Etag:
+      - '"32e80dfee0af120f7f94bbb85e52b845"'
+      X-Goog-Generation:
+      - '1566324170948144'
+      X-Goog-Metageneration:
+      - '1'
+      X-Goog-Stored-Content-Encoding:
+      - identity
+      X-Goog-Stored-Content-Length:
+      - '12'
+      Content-Type:
+      - text/plain
+      Content-Language:
+      - en
+      X-Goog-Hash:
+      - crc32c=hx6yuw==
+      - md5=MugN/uCvEg9/lLu4XlK4RQ==
+      X-Goog-Storage-Class:
+      - STANDARD
+      Accept-Ranges:
+      - bytes
+      Content-Length:
+      - '12'
+      Server:
+      - UploadServer
+      Cache-Control:
+      - public, max-age=3600
+      Age:
+      - '604'
+      Alt-Svc:
+      - quic=":443"; ma=2592000; v="46,43",h3-Q048=":443"; ma=2592000,h3-Q046=":443";
+        ma=2592000,h3-Q043=":443"; ma=2592000
+    body:
+      encoding: UTF-8
+      string: 77.0.3865.40
+    http_version: 
+  recorded_at: Wed, 09 Oct 2019 03:45:43 GMT
+- request:
+    method: get
     uri: https://www.googleapis.com/youtube/v3/videos?id=J7ikFUlkP_k&key=<YOUTUBE_API_KEY>&part=snippet,contentDetails,statistics
     body:
       encoding: US-ASCII
@@ -19,9 +84,9 @@ http_interactions:
       message: OK
     headers:
       Expires:
-      - Tue, 08 Oct 2019 22:10:48 GMT
+      - Wed, 09 Oct 2019 03:45:50 GMT
       Date:
-      - Tue, 08 Oct 2019 22:10:48 GMT
+      - Wed, 09 Oct 2019 03:45:50 GMT
       Cache-Control:
       - private, max-age=0, must-revalidate, no-transform
       Etag:
@@ -118,5 +183,5 @@ http_interactions:
          ]
         }
     http_version: 
-  recorded_at: Tue, 08 Oct 2019 22:10:48 GMT
+  recorded_at: Wed, 09 Oct 2019 03:45:47 GMT
 recorded_with: VCR 4.0.0
