--- a/spec/cassettes/github_api_service/returns_a_users_following_ers_.yml
+++ b/spec/cassettes/github_api_service/returns_a_users_following_ers_.yml
@@ -20,26 +20,27 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - GitHub.com
       Date:
-      - Thu, 10 Oct 2019 02:33:52 GMT
+      - Thu, 10 Oct 2019 23:55:42 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
+      Server:
+      - GitHub.com
       Status:
       - 200 OK
       X-Ratelimit-Limit:
       - '5000'
       X-Ratelimit-Remaining:
-      - '4999'
+      - '4991'
       X-Ratelimit-Reset:
-      - '1570678432'
+      - '1570755273'
       Cache-Control:
       - private, max-age=60, s-maxage=60
       Vary:
       - Accept, Authorization, Cookie, X-GitHub-OTP
+      - Accept-Encoding
       Etag:
       - W/"e31e244d5a8702f484965785fc020a4f"
       X-Oauth-Scopes:
@@ -67,10 +68,10 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - C6E6:35A5:20461E:376C7A:5D9E9890
+      - DF08:6223:60B1A:A4A08:5D9FC4FE
     body:
       encoding: ASCII-8BIT
       string: '[{"login":"yabget","id":10298625,"node_id":"MDQ6VXNlcjEwMjk4NjI1","avatar_url":"https://avatars1.githubusercontent.com/u/10298625?v=4","gravatar_id":"","url":"https://api.github.com/users/yabget","html_url":"https://github.com/yabget","followers_url":"https://api.github.com/users/yabget/followers","following_url":"https://api.github.com/users/yabget/following{/other_user}","gists_url":"https://api.github.com/users/yabget/gists{/gist_id}","starred_url":"https://api.github.com/users/yabget/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/yabget/subscriptions","organizations_url":"https://api.github.com/users/yabget/orgs","repos_url":"https://api.github.com/users/yabget/repos","events_url":"https://api.github.com/users/yabget/events{/privacy}","received_events_url":"https://api.github.com/users/yabget/received_events","type":"User","site_admin":false},{"login":"jkaffrey","id":18563238,"node_id":"MDQ6VXNlcjE4NTYzMjM4","avatar_url":"https://avatars1.githubusercontent.com/u/18563238?v=4","gravatar_id":"","url":"https://api.github.com/users/jkaffrey","html_url":"https://github.com/jkaffrey","followers_url":"https://api.github.com/users/jkaffrey/followers","following_url":"https://api.github.com/users/jkaffrey/following{/other_user}","gists_url":"https://api.github.com/users/jkaffrey/gists{/gist_id}","starred_url":"https://api.github.com/users/jkaffrey/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/jkaffrey/subscriptions","organizations_url":"https://api.github.com/users/jkaffrey/orgs","repos_url":"https://api.github.com/users/jkaffrey/repos","events_url":"https://api.github.com/users/jkaffrey/events{/privacy}","received_events_url":"https://api.github.com/users/jkaffrey/received_events","type":"User","site_admin":false},{"login":"fentontaylor","id":18686466,"node_id":"MDQ6VXNlcjE4Njg2NDY2","avatar_url":"https://avatars0.githubusercontent.com/u/18686466?v=4","gravatar_id":"","url":"https://api.github.com/users/fentontaylor","html_url":"https://github.com/fentontaylor","followers_url":"https://api.github.com/users/fentontaylor/followers","following_url":"https://api.github.com/users/fentontaylor/following{/other_user}","gists_url":"https://api.github.com/users/fentontaylor/gists{/gist_id}","starred_url":"https://api.github.com/users/fentontaylor/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/fentontaylor/subscriptions","organizations_url":"https://api.github.com/users/fentontaylor/orgs","repos_url":"https://api.github.com/users/fentontaylor/repos","events_url":"https://api.github.com/users/fentontaylor/events{/privacy}","received_events_url":"https://api.github.com/users/fentontaylor/received_events","type":"User","site_admin":false},{"login":"alect47","id":23268508,"node_id":"MDQ6VXNlcjIzMjY4NTA4","avatar_url":"https://avatars2.githubusercontent.com/u/23268508?v=4","gravatar_id":"","url":"https://api.github.com/users/alect47","html_url":"https://github.com/alect47","followers_url":"https://api.github.com/users/alect47/followers","following_url":"https://api.github.com/users/alect47/following{/other_user}","gists_url":"https://api.github.com/users/alect47/gists{/gist_id}","starred_url":"https://api.github.com/users/alect47/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/alect47/subscriptions","organizations_url":"https://api.github.com/users/alect47/orgs","repos_url":"https://api.github.com/users/alect47/repos","events_url":"https://api.github.com/users/alect47/events{/privacy}","received_events_url":"https://api.github.com/users/alect47/received_events","type":"User","site_admin":false},{"login":"leiyakenney","id":45922590,"node_id":"MDQ6VXNlcjQ1OTIyNTkw","avatar_url":"https://avatars3.githubusercontent.com/u/45922590?v=4","gravatar_id":"","url":"https://api.github.com/users/leiyakenney","html_url":"https://github.com/leiyakenney","followers_url":"https://api.github.com/users/leiyakenney/followers","following_url":"https://api.github.com/users/leiyakenney/following{/other_user}","gists_url":"https://api.github.com/users/leiyakenney/gists{/gist_id}","starred_url":"https://api.github.com/users/leiyakenney/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/leiyakenney/subscriptions","organizations_url":"https://api.github.com/users/leiyakenney/orgs","repos_url":"https://api.github.com/users/leiyakenney/repos","events_url":"https://api.github.com/users/leiyakenney/events{/privacy}","received_events_url":"https://api.github.com/users/leiyakenney/received_events","type":"User","site_admin":false},{"login":"joshsherwood1","id":49769068,"node_id":"MDQ6VXNlcjQ5NzY5MDY4","avatar_url":"https://avatars2.githubusercontent.com/u/49769068?v=4","gravatar_id":"","url":"https://api.github.com/users/joshsherwood1","html_url":"https://github.com/joshsherwood1","followers_url":"https://api.github.com/users/joshsherwood1/followers","following_url":"https://api.github.com/users/joshsherwood1/following{/other_user}","gists_url":"https://api.github.com/users/joshsherwood1/gists{/gist_id}","starred_url":"https://api.github.com/users/joshsherwood1/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/joshsherwood1/subscriptions","organizations_url":"https://api.github.com/users/joshsherwood1/orgs","repos_url":"https://api.github.com/users/joshsherwood1/repos","events_url":"https://api.github.com/users/joshsherwood1/events{/privacy}","received_events_url":"https://api.github.com/users/joshsherwood1/received_events","type":"User","site_admin":false},{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false},{"login":"DavidBarriga-Gomez","id":50917634,"node_id":"MDQ6VXNlcjUwOTE3NjM0","avatar_url":"https://avatars0.githubusercontent.com/u/50917634?v=4","gravatar_id":"","url":"https://api.github.com/users/DavidBarriga-Gomez","html_url":"https://github.com/DavidBarriga-Gomez","followers_url":"https://api.github.com/users/DavidBarriga-Gomez/followers","following_url":"https://api.github.com/users/DavidBarriga-Gomez/following{/other_user}","gists_url":"https://api.github.com/users/DavidBarriga-Gomez/gists{/gist_id}","starred_url":"https://api.github.com/users/DavidBarriga-Gomez/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/DavidBarriga-Gomez/subscriptions","organizations_url":"https://api.github.com/users/DavidBarriga-Gomez/orgs","repos_url":"https://api.github.com/users/DavidBarriga-Gomez/repos","events_url":"https://api.github.com/users/DavidBarriga-Gomez/events{/privacy}","received_events_url":"https://api.github.com/users/DavidBarriga-Gomez/received_events","type":"User","site_admin":false}]'
     http_version: 
-  recorded_at: Thu, 10 Oct 2019 02:33:52 GMT
+  recorded_at: Thu, 10 Oct 2019 23:55:39 GMT
 recorded_with: VCR 4.0.0
