--- a/spec/cassettes/github_email_api_service/returns_a_users_email.yml
+++ b/spec/cassettes/github_email_api_service/returns_a_users_email.yml
@@ -21,7 +21,7 @@ http_interactions:
       Server:
       - GitHub.com
       Date:
-      - Fri, 11 Oct 2019 21:05:53 GMT
+      - Tue, 15 Oct 2019 23:29:16 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -31,17 +31,17 @@ http_interactions:
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '59'
+      - '53'
       X-Ratelimit-Reset:
-      - '1570831553'
+      - '1571185747'
       Cache-Control:
       - public, max-age=60, s-maxage=60
       Vary:
       - Accept
       Etag:
-      - W/"d549f1bb00bd1d1dc0167744b05da651"
+      - W/"01f44b0b93b074e2b947d0cccd5f5d19"
       Last-Modified:
-      - Wed, 09 Oct 2019 17:30:02 GMT
+      - Tue, 15 Oct 2019 23:05:30 GMT
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -63,10 +63,10 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - D45A:0E98:1A38F0:2D79EF:5DA0EEB1
+      - C976:4EAC:531FE0:98E9D2:5DA6564C
     body:
       encoding: ASCII-8BIT
-      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":null,"public_repos":33,"public_gists":6,"followers":5,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-09T17:30:02Z"}'
+      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-15T23:05:30Z"}'
     http_version: 
-  recorded_at: Fri, 11 Oct 2019 21:05:51 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:16 GMT
 recorded_with: VCR 4.0.0
