--- a/spec/cassettes/sending_email_invitations/sends_an_email_to_users_with_an_email_listed.yml
+++ b/spec/cassettes/sending_email_invitations/sends_an_email_to_users_with_an_email_listed.yml
@@ -18,30 +18,31 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - GitHub.com
       Date:
-      - Mon, 14 Oct 2019 20:44:42 GMT
+      - Tue, 15 Oct 2019 23:29:08 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
+      Server:
+      - GitHub.com
       Status:
       - 200 OK
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '42'
+      - '56'
       X-Ratelimit-Reset:
-      - '1571088581'
+      - '1571185747'
       Cache-Control:
       - public, max-age=60, s-maxage=60
       Vary:
       - Accept
+      - Accept-Encoding
       Etag:
-      - W/"b4dcb441202ee8b142a02aaaf1615d00"
+      - W/"01f44b0b93b074e2b947d0cccd5f5d19"
       Last-Modified:
-      - Sat, 12 Oct 2019 22:32:38 GMT
+      - Tue, 15 Oct 2019 23:05:30 GMT
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -63,12 +64,12 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - C057:16FE:174E9:26318:5DA4DE39
+      - C8CE:72FB:CE6243:16EA1B2:5DA65644
     body:
       encoding: ASCII-8BIT
-      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-12T22:32:38Z"}'
+      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-15T23:05:30Z"}'
     http_version: 
-  recorded_at: Mon, 14 Oct 2019 20:44:42 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:08 GMT
 - request:
     method: get
     uri: https://api.github.com/users/evettetelyas
@@ -88,7 +89,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 14 Oct 2019 20:44:42 GMT
+      - Tue, 15 Oct 2019 23:29:09 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -100,18 +101,18 @@ http_interactions:
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '41'
+      - '55'
       X-Ratelimit-Reset:
-      - '1571088581'
+      - '1571185747'
       Cache-Control:
       - public, max-age=60, s-maxage=60
       Vary:
       - Accept
       - Accept-Encoding
       Etag:
-      - W/"b4dcb441202ee8b142a02aaaf1615d00"
+      - W/"01f44b0b93b074e2b947d0cccd5f5d19"
       Last-Modified:
-      - Sat, 12 Oct 2019 22:32:38 GMT
+      - Tue, 15 Oct 2019 23:05:30 GMT
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -133,12 +134,12 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - C058:34A7:3EEE8:73DC9:5DA4DE3A
+      - C8CF:4EAA:2B9176:4B4F4F:5DA65645
     body:
       encoding: ASCII-8BIT
-      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-12T22:32:38Z"}'
+      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-15T23:05:30Z"}'
     http_version: 
-  recorded_at: Mon, 14 Oct 2019 20:44:42 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:09 GMT
 - request:
     method: get
     uri: https://api.github.com/users/evettetelyas
@@ -158,7 +159,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 14 Oct 2019 20:44:42 GMT
+      - Tue, 15 Oct 2019 23:29:09 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -170,18 +171,18 @@ http_interactions:
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '40'
+      - '54'
       X-Ratelimit-Reset:
-      - '1571088581'
+      - '1571185747'
       Cache-Control:
       - public, max-age=60, s-maxage=60
       Vary:
       - Accept
       - Accept-Encoding
       Etag:
-      - W/"b4dcb441202ee8b142a02aaaf1615d00"
+      - W/"01f44b0b93b074e2b947d0cccd5f5d19"
       Last-Modified:
-      - Sat, 12 Oct 2019 22:32:38 GMT
+      - Tue, 15 Oct 2019 23:05:30 GMT
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -203,10 +204,10 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - C059:61F5:5804D:A33B3:5DA4DE3A
+      - C8D0:75B4:7BF4F4:EB090B:5DA65645
     body:
       encoding: ASCII-8BIT
-      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-12T22:32:38Z"}'
+      string: '{"login":"evettetelyas","id":50186721,"node_id":"MDQ6VXNlcjUwMTg2NzIx","avatar_url":"https://avatars0.githubusercontent.com/u/50186721?v=4","gravatar_id":"","url":"https://api.github.com/users/evettetelyas","html_url":"https://github.com/evettetelyas","followers_url":"https://api.github.com/users/evettetelyas/followers","following_url":"https://api.github.com/users/evettetelyas/following{/other_user}","gists_url":"https://api.github.com/users/evettetelyas/gists{/gist_id}","starred_url":"https://api.github.com/users/evettetelyas/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/evettetelyas/subscriptions","organizations_url":"https://api.github.com/users/evettetelyas/orgs","repos_url":"https://api.github.com/users/evettetelyas/repos","events_url":"https://api.github.com/users/evettetelyas/events{/privacy}","received_events_url":"https://api.github.com/users/evettetelyas/received_events","type":"User","site_admin":false,"name":"evette","company":null,"blog":"","location":null,"email":null,"hireable":null,"bio":"etelyas@gmail.com","public_repos":34,"public_gists":6,"followers":6,"following":5,"created_at":"2019-05-01T23:35:47Z","updated_at":"2019-10-15T23:05:30Z"}'
     http_version: 
-  recorded_at: Mon, 14 Oct 2019 20:44:42 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:09 GMT
 recorded_with: VCR 4.0.0
