--- a/spec/cassettes/sending_email_invitations/won_t_send_an_email_to_a_handle_with_no_email_listed.yml
+++ b/spec/cassettes/sending_email_invitations/won_t_send_an_email_to_a_handle_with_no_email_listed.yml
@@ -15,11 +15,11 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 403
-      message: Forbidden
+      code: 404
+      message: Not Found
     headers:
       Date:
-      - Mon, 14 Oct 2019 20:21:46 GMT
+      - Tue, 15 Oct 2019 23:29:07 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -27,13 +27,13 @@ http_interactions:
       Server:
       - GitHub.com
       Status:
-      - 403 Forbidden
+      - 404 Not Found
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '0'
+      - '59'
       X-Ratelimit-Reset:
-      - '1571084888'
+      - '1571185747'
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -55,14 +55,12 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - EDE5:7499:4D99C3:8438A3:5DA4D8D9
+      - C8CB:4E77:7BD376:E8C7F4:5DA65643
     body:
       encoding: ASCII-8BIT
-      string: '{"message":"API rate limit exceeded for 68.64.216.134. (But here''s
-        the good news: Authenticated requests get a higher rate limit. Check out the
-        documentation for more details.)","documentation_url":"https://developer.github.com/v3/#rate-limiting"}'
+      string: '{"message":"Not Found","documentation_url":"https://developer.github.com/v3/users/#get-a-single-user"}'
     http_version: 
-  recorded_at: Mon, 14 Oct 2019 20:21:46 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:07 GMT
 - request:
     method: get
     uri: https://api.github.com/users/lalalallalallalallalalllallala
@@ -78,25 +76,25 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 403
-      message: Forbidden
+      code: 404
+      message: Not Found
     headers:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Oct 2019 20:21:46 GMT
+      - Tue, 15 Oct 2019 23:29:07 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
       Status:
-      - 403 Forbidden
+      - 404 Not Found
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '0'
+      - '58'
       X-Ratelimit-Reset:
-      - '1571084888'
+      - '1571185747'
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -118,14 +116,12 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - EDE6:57EB:43A13A:79D138:5DA4D8DA
+      - C8CC:26AF:541B93:99F6C9:5DA65643
     body:
       encoding: ASCII-8BIT
-      string: '{"message":"API rate limit exceeded for 68.64.216.134. (But here''s
-        the good news: Authenticated requests get a higher rate limit. Check out the
-        documentation for more details.)","documentation_url":"https://developer.github.com/v3/#rate-limiting"}'
+      string: '{"message":"Not Found","documentation_url":"https://developer.github.com/v3/users/#get-a-single-user"}'
     http_version: 
-  recorded_at: Mon, 14 Oct 2019 20:21:46 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:07 GMT
 - request:
     method: get
     uri: https://api.github.com/users/lalalallalallalallalalllallala
@@ -141,25 +137,25 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 403
-      message: Forbidden
+      code: 404
+      message: Not Found
     headers:
       Server:
       - GitHub.com
       Date:
-      - Mon, 14 Oct 2019 20:21:46 GMT
+      - Tue, 15 Oct 2019 23:29:08 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
       Status:
-      - 403 Forbidden
+      - 404 Not Found
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '0'
+      - '57'
       X-Ratelimit-Reset:
-      - '1571084888'
+      - '1571185747'
       X-Github-Media-Type:
       - github.v3; format=json
       Access-Control-Expose-Headers:
@@ -181,12 +177,10 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Github-Request-Id:
-      - EDE7:35BB:A3F821:123D3FF:5DA4D8DA
+      - C8CD:1EFE:3BC704:69C907:5DA65644
     body:
       encoding: ASCII-8BIT
-      string: '{"message":"API rate limit exceeded for 68.64.216.134. (But here''s
-        the good news: Authenticated requests get a higher rate limit. Check out the
-        documentation for more details.)","documentation_url":"https://developer.github.com/v3/#rate-limiting"}'
+      string: '{"message":"Not Found","documentation_url":"https://developer.github.com/v3/users/#get-a-single-user"}'
     http_version: 
-  recorded_at: Mon, 14 Oct 2019 20:21:46 GMT
+  recorded_at: Tue, 15 Oct 2019 23:29:08 GMT
 recorded_with: VCR 4.0.0
