--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,6 +1,8 @@
 {
-  "application.js": "/packs/application-2478f464d61db1eeaeab.js",
-  "application.js.map": "/packs/application-2478f464d61db1eeaeab.js.map",
-  "controllers/tutorials_controller.js": "/packs/controllers/tutorials_controller-c137c438bffe4c0e9d9e.js",
-  "controllers/tutorials_controller.js.map": "/packs/controllers/tutorials_controller-c137c438bffe4c0e9d9e.js.map"
+  "application.js": "/packs/application-e3222481626c3af26d0e.js",
+  "application.js.map": "/packs/application-e3222481626c3af26d0e.js.map",
+  "controllers/tutorials_controller.js": "/packs/controllers/tutorials_controller-82fa33f1dd34900f0aba.js",
+  "controllers/tutorials_controller.js.map": "/packs/controllers/tutorials_controller-82fa33f1dd34900f0aba.js.map",
+  "controllers/user_videos_controller.js": "/packs/controllers/user_videos_controller-789ce24959518b7bdb74.js",
+  "controllers/user_videos_controller.js.map": "/packs/controllers/user_videos_controller-789ce24959518b7bdb74.js.map"
 }
